# chess_cmake

./: CMakeLists.txt  CMakeSettings.json  bench.h  bitboard.h  board.cpp  board.h  chess_cmake.cpp  chess_cmake.h  commons.h  debug_utils.h  engine.h  eval_constants.h  move.h  outcome.h
